[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-pipeline"
version = "1.0.0"
description = "Unified lead generation pipeline for AAC Blocks and IndiaMart data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.25.0",
    "python-dotenv>=1.0.0",
    "google-genai>=0.8.0",
    "playwright>=1.40.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0"
]

[project.scripts]
lead-pipeline = "lead_pipeline:main"

[tool.setuptools]
packages = []

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]  # Line too long, let formatter handle this